--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "azure-event-hubs": "0.0.8",
     "azure-iot-device-mqtt": "^1.4.0",
+    "dotenv": "^5.0.1",
     "uuid": "^3.2.1"
-  }
   }
 }
